Finished about us page, updated nav, added footer, updated margins and padding across all pages

--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
         <a href="products.html">Our Pizza</a>
         <a href="aboutus.html">About Us</a>
     </nav>
-    <section>
+    <section class="clearfix">
         <img class="floatright" src="imgs/frontpageintroimg.png" alt="Image of dough accompanying intro">
         <h3 class="intro">Every pizza, your way</h3>
         <p class="intro">
             At Paul's Pizzeria we're dedicated to Pizza your way, using fresh ingredients and a consistently delicious crust. With a recipe dating back to 2023, each piece of dough spends at least 48 hours being prepared and rising before you even walk through the front door.
         </p>
     </section>
+    <footer>
+        <a href="">notarealemail@gmail.com</a> 
+        <a href="">417-222-2222</a>
+        <a href="">47 S Pizza Place, Springfield, MO</a>
+    </footer>
 </body>
 </html>
