--- a/products.html
+++ b/products.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 id="logo"><img src="imgs/pizzalogo.png" alt="Logo of Paul's Pizzeria"></h1>
+    <h1 id="logo"><img src="imgs/logo2.png" alt="Logo of Paul's Pizzeria"></h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="products.html">Our Pizza</a>
         <a href="aboutus.html">About Us</a>
     </nav>
     <section>
-        <p>
-            At Paul's Pizzeria we value your experience over everything, even natural laws. That means you can put everything from pineapple to anchovies on your Pizza and we won't throw you out. 
-        </p>
-        <p>
-            
-        </p>
+
     </section>
+    <footer>
+        <a href="">notarealemail@gmail.com</a> 
+        <a href="">417-222-2222</a>
+        <a href="">47 S Pizza Place, Springfield, MO</a>
+    </footer>
 </body>
 </html>
