Made products page, kind of. Change number of css classes, updated about us to use flex boxes

--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!--
-     September, 17th 2024. 
-     Author Paul Bute
-     Purpose: Homepage for Brady'd Jewelry
-      -->
+    <!-- 
+September 18th, 2024
+Paul Bute
+My Professional Website -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paul's Pizzeria</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1 id="logo"><img src="imgs/logo2.png" alt="Logo of Paul's Pizzeria"></h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="products.html">Our Pizza</a>
-        <a href="aboutus.html">About Us</a>
+        <a href="aboutusflex.html">About Us</a>
     </nav>
     <section class="clearfix">
         <img class="floatright" src="imgs/frontpageintroimg.png" alt="Image of dough accompanying intro">
         <h3 class="intro">Every pizza, your way</h3>
         <p class="intro">
-            At Paul's Pizzeria we're dedicated to Pizza your way, using fresh ingredients and a consistently delicious crust. With a recipe dating back to 2023, each piece of dough spends at least 48 hours being prepared and rising before you even walk through the front door.
+            At Paul's Pizzeria we're dedicated to <a href="products.html">pizza your way</a>, using fresh ingredients
+            and a consistently delicious crust. With a recipe dating back to 2023, each piece of dough spends at least
+            48 hours being prepared and rising before you even walk through the front door.
         </p>
     </section>
     <footer>
-        <a href="">notarealemail@gmail.com</a> 
-        <a href="">417-222-2222</a>
-        <a href="">47 S Pizza Place, Springfield, MO</a>
+        <a href="mailto:notarealemail@gmail.com">notarealemail@gmail.com</a>
+        <a href="tel:4172222222">417-222-2222</a>
+        <a href="googlemapsplaceholder">47 S Pizza Place, Springfield, MO</a>
     </footer>
 </body>
+
 </html>
