--- a/products.html
+++ b/products.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- 
+September 18th, 2024
+Paul Bute
+My Professional Website -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1 id="logo"><img src="imgs/logo2.png" alt="Logo of Paul's Pizzeria"></h1>
     <nav>
@@ -13,13 +19,30 @@
         <a href="products.html">Our Pizza</a>
         <a href="aboutus.html">About Us</a>
     </nav>
-    <section>
-
+    <section class="sectiontest">
+        <h3 class="centeredheader">No matter your craving, we've got you covered</h3>
+        <p id="shiftlefter" class="imhungry">
+            Whether it's a classic with pepperoni you're craving
+            <img class="productimg" src="imgs/pizzaonrack1.jpg" alt="Pizza on rack with Wine">
+        </p>
+        <p id="shiftleft" class="imhungry">
+            or a delicious calzone
+            <img class="productimg" src="imgs/bisectedcalzone.jpg" alt="Bisected Calzone">
+        </p>
+        <p class="imhungry">
+            we've got you covered
+            <img class="productimg" src="imgs/pizzaonrack2.jpg" alt="Pizza and Calzone">
+        </p>
+        <p>
+            Note: menu is a work in progress, please email us at <a
+                href="mailto:notarealemail@gmail.com">notarealemail@gmail.com</a> for a menu.
+        </p>
     </section>
     <footer>
-        <a href="">notarealemail@gmail.com</a> 
-        <a href="">417-222-2222</a>
-        <a href="">47 S Pizza Place, Springfield, MO</a>
+        <a href="mailto:notarealemail@gmail.com">notarealemail@gmail.com</a>
+        <a href="tel:4172222222">417-222-2222</a>
+        <a href="googlemapsplaceholder">47 S Pizza Place, Springfield, MO</a>
     </footer>
 </body>
+
 </html>
